# research-assistant

./: .env.example  .gitignore  BUILD_LOG.md  DECISIONS.md  DEFERRED.md  POLISH.md  QUESTIONS.md  README.md  RELEASE.md  ResearchApp_BuildPlan.md  package-lock.json  package.json
apps/api/: Dockerfile  alembic.ini  fly.toml  pyproject.toml
apps/api/alembic/: env.py
apps/api/alembic/versions/: 0001_initial_projects.py  0002_articles.py  0003_highlights_notes.py  0004_manuscript_sections.py  0005_abbreviations.py  0006_statistics.py  0007_systematic_review.py  0008_meta_analysis.py  0009_ingestion.py  0010_figures_consort_templates.py  0011_icmje_frontmatter.py  0012_snapshots_comments.py  0013_cover_letters_responses.py  0014_psm_matched_datasets.py  0015_dataset_transformations.py  0016_dataset_derived_from_list.py  0017_plots_and_plans.py  0018_grade_prospero.py  0019_living_review.py  0020_sr_depth_mesh.py  0021_stats_depth.py  0022_dataset_display_labels.py  0023_health_economics.py  0024_reporting_checklists.py  0025_citation_depth.py  0026_peer_reviews.py  0027_users_auth.py  0028_project_members.py
apps/api/src/research_api/: __main__.py  auth_deps.py  container.py  main.py  settings.py
apps/api/tests/: conftest.py  test_abbreviation_scanner.py  test_abbreviations_route.py  test_ai_interpret_result.py  test_ai_suggest_screening.py  test_analyses_route.py  test_analysis_plan_lock_sap.py  test_analysis_plans_route.py  test_article_repository.py  test_articles_merge.py  test_articles_route.py  test_articles_route_autofill.py  test_articles_route_bulk_upload.py  test_articles_table_route.py  test_articles_table_service.py  test_auth_routes.py  test_bibliography_datasets.py  test_bibliography_format.py  test_bibliography_ordering.py  test_bibliography_route.py  test_bibliography_service.py  test_bundle_checklists_round_trip.py  test_bundle_economic_round_trip.py  test_bundle_export.py  test_bundle_grade_prospero_round_trip.py  test_bundle_import.py  test_bundle_living_review_round_trip.py  test_bundle_mp16_round_trip.py  test_bundle_plots_plans_round_trip.py  test_bundle_stats_depth_round_trip.py  test_ceac.py  test_chart_display_labels.py  test_chart_label_overrides.py  test_checklists_auto_check.py  test_checklists_catalogue.py  test_checklists_export.py  test_checklists_route.py  test_citation_cluster.py  test_citation_format.py  test_citation_format_apa.py  (+218 more)
apps/api/tests/fixtures/: bibtex_googlescholar_sample.bib  (+12 more)
(+919 files in other folders)
