[project]
name = "research-api"
version = "0.0.1"
description = "Research Manuscript Assistant API"
requires-python = ">=3.12,<3.14"
dependencies = [
  "fastapi>=0.115",
  "uvicorn[standard]>=0.30",
  "sqlalchemy[asyncio]>=2.0.30",
  "aiosqlite>=0.20",
  "alembic>=1.13",
  "pydantic>=2.7",
  "pydantic-settings>=2.4",
  "python-multipart>=0.0.9",
  "httpx>=0.27",
  "python-dotenv>=1.0",
  "google-generativeai>=0.8",
  "pypdf>=4.0",
  "python-docx>=1.1",
  "python-magic>=0.4",
  "rapidfuzz>=3.0",
  "tenacity>=8.2",
  "pandas>=2.2",
  "numpy>=1.26",
  "scipy>=1.13",
  "statsmodels>=0.14",
  "pingouin>=0.5",
  "lifelines>=0.29",
  "openpyxl>=3.1",
  "reportlab>=4.0",
  "svglib==1.4.1",
  "Pillow>=10.0",
  "bibtexparser>=1.4,<2",
  "apscheduler>=3.10",
  # Phase S1 — argon2id password hashing for the multi-user auth
  # subsystem. Pure-OSS, no commercial license.
  "argon2-cffi>=23.1",
]

[project.optional-dependencies]
dev = [
  "pytest>=8",
  "pytest-asyncio>=0.23",
  "anyio>=4",
  "ruff>=0.6",
  "respx>=0.21",
  # Phase E1 — Electron desktop packaging. Build-time only; PyInstaller
  # freezes the FastAPI backend into a folder that ships next to the
  # Electron shell. Never imported at runtime.
  "pyinstaller>=6.20",
]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
pythonpath = ["src"]

[tool.ruff]
line-length = 100
target-version = "py312"
